--- a/pages/canceled_orders.html
+++ b/pages/canceled_orders.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token 2 Canceled Orders</title>
+    <title>Token2 Canceled Orders</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,15 +36,15 @@
         <main class="container">
             <div class="row float-end mb-3">
                 <div class="col d-flex">
-                    <h2 class="text-white me-3">Hi! Chingiz Ahmadov</h2>
-                    <button type="button" class="btn nav__btn px-3 text-center">
+                    <h2 class="text-white me-3 manrope">Hi! Chingiz Ahmadov</h2>
+                    <button type="button" class="btn nav__btn btn__square px-3 text-center">
                         <i class="fa-regular fa-right-from-bracket"></i>
                     </button>
                 </div>
             </div>
             <div class="row w-100">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2">Canceled Orders</h1>
+                    <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2 manrope">Canceled Orders</h1>
                     <p class="lh-lg text-white mb-lg-4 mb-4 pb-sm-2 fw-normal" style="text-align: justify;">We have
                         solutions that
                         can integrate with almost any system, below
@@ -86,12 +86,12 @@
         </main>
     </header>
     <!-- Orders -->
-    <main class="my-4">
-        <div class="container">
+    <main class="main canceled__orders my-4">
+        <div class="container gx-sm-4 gx-0">
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
-                <div class="col-12 bg-white rounded mb-4 mt-encriment p-5">
-                    <div class="row mb-4">
+                <div class="col-12 bg-white rounded mb-4 mt-encriment p-md-5 p-3">
+                    <div class="row">
                         <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-3 mb-md-2 mb-2">
@@ -105,9 +105,9 @@
                             <p>Tracking Number:<b>-</b></p>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-start align-items-center mb-5">
+                    <div class="row order_steps_blog mb-4 pt-sm-5 pt-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-2 col-md-12 col-12 mb-5">
+                        <div class="col-lg-3 col-md-12 col-12 mb-4">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -116,36 +116,35 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul
-                            class="ms-lg-5 mt-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                            <!-- red line -->
+                            <div class="order_steps_line" style="width: 25%;"></div>
+                            <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
+                                <span class="order_steps_text">Ready for dispatch</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
-                                <div class="tooltip-rel">
-                                    <p class="tooltip-abs px-lg-2 py-lg-2 px-md-2 py-md-2 px-2 py-1 rounded">
-                                        <i class="fa-light fa-triangle-exclamation me-2 text-danger""></i>
-                                        <span>Please check product and platform compatibility before placing an order. <a href=""><ins>Contact with
-                                            us</ins></a></span>
-                                    </p>
-                            </div>
-                            <i class=" fs-lg-4 fs-6 fa-solid fa-barcode"></i>
+                            <li class="order__step">
+                                <i class="fs-lg-4 fs-6 fa-solid fa-barcode"></i>
+                                <span class="order_steps_text">Order preparation</span>
+                                <p class="order_step_tooltip px-lg-2 py-lg-2 px-md-2 py-md-2 px-2 py-1 rounded">
+                                    <i class="fa-light fa-triangle-exclamation me-2 text-danger"></i>
+                                    <span>Please check product and platform compatibility before placing an order.
+                                        <a href="#"><ins>Contact with
+                                                us</ins></a></span>
+                                </p>
                             </li>
-
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step ">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-truck"></i>
+                                <span class="order_steps_text">Order shipped</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step ">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-box-open"></i>
+                                <span class="order_steps_text">Order delivered</span>
                             </li>
                         </ul>
                     </div>
                     <!-- Product List -->
-                    <div class="row d-flex flex-column  mb-3">
+                    <div class="row d-flex flex-column mb-3 manrope">
                         <!-- Table Headers -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-2">
@@ -192,7 +191,7 @@
                         </div>
                     </div>
                     <!-- Orders Price -->
-                    <div class="row d-flex flex-column ">
+                    <div class="row d-flex flex-column manrope">
                         <!-- Orders Total Price -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
@@ -214,7 +213,7 @@
                     </div>
                 </div>
                 <!-- Order N:2 -->
-                <div class="col-12 bg-white rounded mb-4 p-5">
+                <div class="col-12 bg-white rounded mb-4 p-md-5 p-3">
                     <div class="row mb-4">
                         <h5 class="fw-bold">Order # 3456789</h5><!-- Order ID -->
                         <!-- Order Payment -->
@@ -229,9 +228,9 @@
                             <p>Tracking Number:<b>#34567890987435</b></p>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-start align-items-center mb-5">
+                    <div class="row order_steps_blog mb-4 pt-sm-5 pt-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-2 col-md-12 col-12 mb-5">
+                        <div class="col-lg-3 col-md-12 col-12 mb-4">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -240,36 +239,35 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul
-                            class="ms-lg-5 mt-5 col-lg-9 col-md-12 col-sm-12 line-second position-relative d-flex justify-content-evenly align-items-center">
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                            <!-- red line -->
+                            <div class="order_steps_line" style="width: 25%;"></div>
+                            <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
+                                <span class="order_steps_text">Ready for dispatch</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-barcode"></i>
+                                <span class="order_steps_text">Order preparation</span>
                             </li>
-
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
-                                <div class="tooltip-rel">
-                                    <p class="tooltip-abs2 px-lg-2 py-lg-2 px-md-2 py-md-2 px-2 py-1 rounded">
-                                        <i class="fa-light fa-triangle-exclamation me-2 text-danger""></i>
-                                        <span>Please check product and platform compatibility before placing an order. <a href=""><ins>Contact with
-                                            us</ins></a></span>
+                            <li class="order__step ">
+                                <i class="fs-lg-4 fs-6 fa-solid fa-truck"></i>
+                                <span class="order_steps_text">Order shipped</span>
+                                <p class="order_step_tooltip px-lg-2 py-lg-2 px-md-2 py-md-2 px-2 py-1 rounded">
+                                    <i class="fa-light fa-triangle-exclamation me-2 text-danger"></i>
+                                    <span>Please check product and platform compatibility before placing an order.
+                                        <a href="#"><ins>Contact with
+                                                us</ins></a></span>
                                 </p>
-                            </div>
-                            <i class=" fs-lg-4 fs-6 fa-solid fa-truck"></i>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step ">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-box-open"></i>
+                                <span class="order_steps_text">Order delivered</span>
                             </li>
                         </ul>
                     </div>
                     <!-- Product List -->
-                    <div class="row d-flex flex-column  mb-3">
+                    <div class="row d-flex flex-column mb-3 manrope">
                         <!-- Table Headers -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-2">
@@ -288,7 +286,7 @@
                         </div>
                     </div>
                     <!-- Orders Price -->
-                    <div class="row d-flex flex-column ">
+                    <div class="row d-flex flex-column manrope">
                         <!-- Orders Total Price -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
