--- a/pages/completed_orders.html
+++ b/pages/completed_orders.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token 2 Completed Orders</title>
+    <title>Token2 Completed Orders</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,16 +36,17 @@
         <div class="container">
             <div class="row float-end mb-3">
                 <div class="col d-flex">
-                    <h2 class="text-white me-3">Hi! Chingiz Ahmadov</h2>
-                    <button type="button" class="btn nav__btn px-3 text-center">
+                    <h2 class="text-white me-3 manrope">Hi! Chingiz Ahmadov</h2>
+                    <button type="button" class="btn nav__btn btn__square px-3 text-center">
                         <i class="fa-regular fa-right-from-bracket"></i>
                     </button>
                 </div>
             </div>
             <div class="row w-100">
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2">Completed Orders</h1>
-                    <p class="lh-lg text-white mb-lg-4 mb-4 pb-sm-2 fw-normal" style="text-align: justify;">We have solutions that can integrate with almost any system, below
+                    <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2 manrope">Completed Orders</h1>
+                    <p class="lh-lg text-white mb-lg-4 mb-4 pb-sm-2 fw-normal" style="text-align: justify;">We have
+                        solutions that can integrate with almost any system, below
                         is the list of integration
                         guides with different systems published so far, and it is far from being exhaustive. Feel free
                         to contact us if you cannot find your desired product in the list below, we will check the
@@ -86,10 +87,10 @@
     <!-- Orders -->
 
     <main class="main">
-        <div class="container my-4">
+        <div class="container my-4 gx-sm-4 gx-0">
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
-                <div class="col-12 bg-white p-5 rounded mb-4 mt-encriment order">
+                <div class="col-12 bg-white p-md-5 p-3 rounded mb-4 mt-encriment order">
                     <button class="btn btn-lg btn-white shadow print">
                         <i class="fa-solid fa-print"></i>
                     </button>
@@ -107,9 +108,9 @@
                             <p>Tracking Number:<b>#34567890987435</b></p>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-start align-items-center mb-5">
+                    <div class="row order_steps_blog mb-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-2 col-md-12 col-12 mb-5">
+                        <div class="col-lg-3 col-md-12 col-12 mb-4">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -118,28 +119,29 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul
-                            class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                            <!-- red line -->
+                            <div class="order_steps_line" style="width: 75%;"></div>
+                            <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
+                                <span class="order_steps_text">Ready for dispatch</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-barcode"></i>
+                                <span class="order_steps_text">Order preparation</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-truck"></i>
+                                <span class="order_steps_text">Order shipped</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step ">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-box-open"></i>
+                                <span class="order_steps_text">Order delivered</span>
                             </li>
                         </ul>
                     </div>
                     <!-- Product List -->
-                    <div class="row d-flex flex-column mb-3">
+                    <div class="row d-flex flex-column mb-3 manrope">
                         <!-- Table Headers -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-2">
@@ -186,7 +188,7 @@
                         </div>
                     </div>
                     <!-- Orders Price -->
-                    <div class="row d-flex flex-column">
+                    <div class="row d-flex flex-column manrope">
                         <!-- Orders Total Price -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
@@ -208,7 +210,7 @@
                     </div>
                 </div>
                 <!-- Order N:2 -->
-                <div class="col-12 bg-white p-5 rounded mb-4 order2">
+                <div class="col-12 bg-white p-md-5 p-3 rounded mb-4 order2">
                     <button class="btn btn-lg btn-white shadow print">
                         <i class="fa-solid fa-print"></i>
                     </button>
@@ -226,9 +228,9 @@
                             <p>Tracking Number:<b>#34567890987435</b></p>
                         </div>
                     </div>
-                    <div class="row d-flex justify-content-start align-items-center mb-5">
+                    <div class="row order_steps_blog mb-4">
                         <!-- Buyeer -->
-                        <div class="col-lg-2 col-md-12 col-12 mb-5">
+                        <div class="col-lg-3 col-md-12 col-12 mb-4">
                             <p>Receiver: <b>Ahmadov Chingiz,
                                     Grosse Scharrnstr. 9,
                                     +49 176 36357787,
@@ -237,28 +239,29 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul
-                            class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                        <ul class="order__steps col-lg-9 col-md-12 col-sm-12">
+                            <!-- red line -->
+                            <div class="order_steps_line" style="width: 75%;"></div>
+                            <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
+                                <span class="order_steps_text">Ready for dispatch</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-barcode"></i>
+                                <span class="order_steps_text">Order preparation</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step active">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-truck"></i>
+                                <span class="order_steps_text">Order shipped</span>
                             </li>
-                            <li
-                                class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
+                            <li class="order__step ">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-box-open"></i>
+                                <span class="order_steps_text">Order delivered</span>
                             </li>
                         </ul>
                     </div>
                     <!-- Product List -->
-                    <div class="row d-flex flex-column mb-3">
+                    <div class="row d-flex flex-column mb-3 manrope">
                         <!-- Table Headers -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-light p-3 mb-2">
@@ -277,7 +280,7 @@
                         </div>
                     </div>
                     <!-- Orders Price -->
-                    <div class="row d-flex flex-column">
+                    <div class="row d-flex flex-column manrope">
                         <!-- Orders Total Price -->
                         <div
                             class="col d-flex justify-content-between align-items-start fw-bolder w-100 rounded bg-grey p-3 mb-1">
