fixed tools table

--- a/pages/compare.html
+++ b/pages/compare.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="row compare__cards position-relative overflow-hidden">
                     <div
-                        class="p-1 compare__card active rounded-start">
+                        class="col-2 p-1 compare__card active rounded-start">
                         <div class="compare_selected_item rounded-top">
                             Selected item
                         </div>
@@ -115,7 +115,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="row compare__boxes">
+                    <div class="row compare__boxes gx-0">
                         <div
                             class="p-1 compare__card">
                             <div class="compare_selected_item rounded-top">
