--- a/pages/tools.html
+++ b/pages/tools.html
@@ -97,7 +97,7 @@
             <div class="row mb-lg-5 mb-5 mx-auto">
                 <div class="col-12 bg-white  rounded p-lg-4 p-3">
                     <div class="table-responsive">
-                        <table class="table tools__table" style="min-width:1000px;">
+                        <table class="table tools__table">
                             <h4 class="fw-semibold">FIDO2 Keys</h4>
                             <thead>
                                 <tr class="tools_table_selects text-muted">
